algo finally works